Added dinner side options on recipe page removed orange and cyan colors changed lunch generate spinner to vertical

--- a/app/src/main/res/layout/activity_dinner_generate.xml
+++ b/app/src/main/res/layout/activity_dinner_generate.xml
@@ -61,6 +61,8 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"/>
+
+
     </LinearLayout>
 
     <!-- Order Filter By Spinner -->
@@ -86,7 +88,11 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"/>
+
+
     </LinearLayout>
+
+
 
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
@@ -97,5 +103,14 @@
         android:layout_marginTop="48dp"
         android:padding="16dp"
         android:clipToPadding="false" />
+
+    <Button
+        android:id="@+id/button_dinner_sides"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:text="View Dinner Sides" />
+
 
 </RelativeLayout>
