--- a/app/src/main/res/layout/activity_lunch_generate.xml
+++ b/app/src/main/res/layout/activity_lunch_generate.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/orange"
     android:padding="16dp">
 
     <!-- Header Container -->
@@ -23,7 +22,7 @@
             android:text="@string/browse_meals"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/black"/>
         <TextView
             android:layout_width="100dp"
             android:layout_height="50dp">
@@ -50,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/food_intolerance"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <Spinner
@@ -74,7 +73,7 @@
             android:layout_height="wrap_content"
             android:text="@string/filter_food_by"
             android:textSize="18sp"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:layout_gravity="center_vertical"/>
 
         <Spinner
