--- a/app/src/main/res/layout/activity_dinner_sides.xml
+++ b/app/src/main/res/layout/activity_dinner_sides.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".ExploreMeals">
+    android:padding="16dp">
 
     <!-- Header Container -->
     <LinearLayout
